# stablecoin_system

./: Anchor.toml  README.md  collateral-mint.json  consolidated_instructions.txt  usdc-mint.json
app/: admin_test.json  package-lock.json  package.json  user_test.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/admin/: page.tsx
app/app/dashboard/: page.tsx
app/app/loan/: page.tsx
app/app/login/: page.tsx
app/app/remit/: page.tsx
app/app/swap/: page.tsx
app/components/: AppWalletMultiButton.tsx  Navbar.tsx  SessionProvider.tsx  WalletContextProvider.tsx
app/hooks/: useAnchorProgram.ts
app/utils/: idl.json
docs/: implementation_plan.md  task.md  walkthrough.md
programs/stablecoin_system/: Cargo.toml
programs/stablecoin_system/src/: lib.rs  state.rs  utils.rs
programs/stablecoin_system/src/instructions/: burn_usdt.rs  configure_collateral.rs  deposit_collateral.rs  governance.rs  initialize.rs  liquidate.rs  mint_usdt.rs  mod.rs  psm.rs  withdraw_collateral.rs
tests/: stablecoin_system.ts
